# data-pipeline

./: README.md  bids_configuration.py  bids_conversion.py  config.yaml  data_pipeline.py  pylintrc  pyproject.toml  requirements.txt  rsync.py  setup.cfg  subjects.json  utils.py
patches/: custom_rules_template.py  dataset_description.patch  hirni_heuristic.patch
src/data_pipeline/: bids_configuration.py  config_handler.py  data_pipeline.py  git_handler.py  rsync.py  setup_datalad.py  utils.py
src/data_pipeline/bids_conversion/: __init__.py  bids_configuration.py  bids_conversion.py  configuration.py  configure.py  run.py  source_configuration.py
src/data_pipeline/bids_conversion/templates/: bids-validator-config_template.json  procedure_template.py  rules_base.py
src/data_pipeline/templates/: config_template.yaml  custom_rules_template.py  procedure_template.py  procedure_template.sh
tests/: conftest.py  test_bids_conversion_configure.py  test_config_handler.py  test_data_pipeline.py
