
[metadata]
name = data_pipeline
version = "0.1"

[options]
packages = find:
include_package_data = true
package_dir =
    =src
install_requires =
    Click
    datalad
    datalad-hirni
    jsonschema
    PyYAML
    questionary

[options.entry_points]
console_scripts =
    data-pipeline = data_pipeline.data_pipeline:main

[options.packages.find]
where=src