
[metadata]
name = data_pipeline
version = "0.1"

[options]
packages = find:
package_dir =
    =src
install_requires =
    Click
    datalad
    datalad-hirni
    jsonschema
    PyYAML
    questionary

[options.entry_points]
console_scripts =
    data_pipeline = data_pipeline.data_pipeline:main

[options.packages.find]
where=src

[options.package_data]
data_pipeline.patches = *.patch